samples/_failures_safe/1761648649_1a512a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27a1174c.c: In function ‘main’:
./samples/SAFE/__tmp_27a1174c.c:145:35: error: expected ‘)’ at end of input
  145 |     if (graph_add_edge(&g, b, c, 1
      |                       ~           ^
      |                                   )
./samples/SAFE/__tmp_27a1174c.c:145:5: error: expected declaration or statement at end of input
  145 |     if (graph_add_edge(&g, b, c, 1
      |     ^~
